--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -28,12 +28,7 @@
 		
 		<p>Challenge your brain power with our Memory Game. Our fun and simple game will help cultivate better memory and overall brain power in just a few minutes of gameplay each day.
 		
-		<div>
-		<img src="images/back.png" alt="Queen of Diamonds">
-		<img src="images/back.png" alt="Queen of Hearts">
-		<img src="images/back.png" alt="King of Diamonds">
-		<img src="images/back.png" alt="King of Hearts">
-		</div>
+		<div id="game-board" class="board clearfix"></div>
 		
 		</main>
 		
